Fixed right-sided alignment of hero-box contents using text-align right.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -155,6 +155,7 @@ header a {
     width:70%;
     min-height: 200px;
     padding: 10px;
+    text-align: right;
 }
 
 #hero-text .hero-button {
